# tap-hightouch

./: README.md  pyproject.toml  tox.ini
tap_hightouch/: client.py  streams.py  tap.py
tap_hightouch/tests/: __init__.py  test_core.py
